--- a/src/telehealth/EnterprisePanel.form
+++ b/src/telehealth/EnterprisePanel.form
@@ -52,11 +52,16 @@
                                                   <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
                                                   <Component id="jLabel5" alignment="0" min="-2" pref="76" max="-2" attributes="0"/>
                                               </Group>
-                                              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="txtAddress2" min="-2" pref="184" max="-2" attributes="0"/>
-                                                  <Component id="txtState" min="-2" pref="184" max="-2" attributes="0"/>
-                                                  <Component id="networkJComboBox" alignment="1" min="-2" pref="180" max="-2" attributes="0"/>
+                                              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                  <Component id="networkJComboBox" min="-2" pref="190" max="-2" attributes="0"/>
+                                                  <Group type="102" alignment="1" attributes="0">
+                                                      <Group type="103" groupAlignment="1" attributes="0">
+                                                          <Component id="txtAddress2" alignment="0" max="32767" attributes="0"/>
+                                                          <Component id="txtState" max="32767" attributes="0"/>
+                                                      </Group>
+                                                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                                                  </Group>
                                               </Group>
                                           </Group>
                                           <Group type="102" attributes="0">
@@ -73,10 +78,10 @@
                                               </Group>
                                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                  <Group type="102" attributes="0">
-                                                      <Component id="btnSubmit" min="-2" max="-2" attributes="0"/>
-                                                      <EmptySpace max="32767" attributes="0"/>
-                                                      <Component id="btnDelete" min="-2" max="-2" attributes="0"/>
+                                                  <Group type="102" alignment="1" attributes="0">
+                                                      <Component id="btnSubmit" max="32767" attributes="0"/>
+                                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                                      <Component id="btnDelete" min="-2" pref="90" max="-2" attributes="0"/>
                                                   </Group>
                                                   <Component id="txtPhone" min="-2" pref="184" max="-2" attributes="0"/>
                                                   <Component id="txtContactPerson" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
@@ -196,7 +201,7 @@
               </Group>
               <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="151" max="-2" attributes="0"/>
-              <EmptySpace pref="75" max="32767" attributes="0"/>
+              <EmptySpace pref="73" max="32767" attributes="0"/>
               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -420,6 +425,7 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="ComboBoxEnterpriseType">
       <Properties>
+        <Property name="font" type="java.awt.Font" resourceKey="ComboBoxEnterpriseType.font"/>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="3">
             <StringItem index="0" value="Hospital"/>
@@ -439,6 +445,8 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnSubmit">
       <Properties>
+        <Property name="font" type="java.awt.Font" resourceKey="btnSubmit.font"/>
+        <Property name="icon" type="javax.swing.Icon" resourceKey="btnSubmit.icon"/>
         <Property name="text" type="java.lang.String" resourceKey="btnSubmit.text"/>
         <Property name="name" type="java.lang.String" value="btnSubmit" noResource="true"/>
       </Properties>
@@ -455,6 +463,7 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="networkJComboBox">
       <Properties>
+        <Property name="font" type="java.awt.Font" resourceKey="networkJComboBox.font"/>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
             <StringItem index="0" value="Item 1"/>
@@ -471,6 +480,8 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnDelete">
       <Properties>
+        <Property name="font" type="java.awt.Font" resourceKey="btnSubmit.font"/>
+        <Property name="icon" type="javax.swing.Icon" resourceKey="btnDelete.icon"/>
         <Property name="text" type="java.lang.String" resourceKey="btnDelete.text"/>
         <Property name="name" type="java.lang.String" value="btnDelete" noResource="true"/>
       </Properties>
